Fixed form on mobile

--- a/src/style.less
+++ b/src/style.less
@@ -486,6 +486,19 @@ table {
 			border-radius: 6px;
 		}
 	}
+
+	@media (max-width: 800px) {
+		font-size: .7em;
+
+		td, th {
+			padding: 10px;
+
+			span {
+				display: block;
+				margin: 2px;
+			}
+		}
+	}
 }
 
 // aspect ratio fix for responsive youtube embeds
